# api-gateway/docs/swagger.json
@@ -268,55 +268,6 @@
                 }
             }
         },
-        "/v1/FlashSale/delete/{id}": {
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Delete an FlashSale by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "FlashSale"
-                ],
-                "summary": "Delete FlashSale",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "FlashSale ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "message\":\"Flash Sale deleted successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/flashSale/create": {
             "post": {
                 "security": [
@@ -349,6 +300,55 @@
                 "responses": {
                     "200": {
                         "description": "Flash Sale created successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/flashSale/delete/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete an FlashSale by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FlashSale"
+                ],
+                "summary": "Delete FlashSale",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "FlashSale ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "message\":\"Flash Sale deleted successfully",
                         "schema": {
                             "type": "string"
                         }
@@ -417,81 +417,6 @@
                         "description": "List of FlashSales",
                         "schema": {
                             "$ref": "#/definitions/genproto.ListAllFlashSalesRes"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/flashSale/nearby": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Retrieve flash sales near a specific location",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "FlashSale"
-                ],
-                "summary": "Get Nearby Flash Sales",
-                "parameters": [
-                    {
-                        "type": "number",
-                        "description": "Latitude of the location",
-                        "name": "Latitude",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "number",
-                        "description": "Longitude of the location",
-                        "name": "Longitude",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "number",
-                        "description": "Search radius in meters",
-                        "name": "Radius",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Limit number of results",
-                        "name": "Limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Offset for pagination",
-                        "name": "Offset",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "List of nearby flash sales",
-                        "schema": {
-                            "$ref": "#/definitions/genproto.NearbyFlashSalesRes"
                         }
                     },
                     "400": {
@@ -2355,9 +2280,6 @@
                 "name": {
                     "type": "string"
                 },
-                "productID": {
-                    "type": "string"
-                },
                 "start_time": {
                     "type": "string"
                 },
@@ -2495,29 +2417,6 @@
                 }
             }
         },
-        "genproto.FlashSaleWithLocation": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "flash_sale_id": {
-                    "type": "string"
-                },
-                "latitude": {
-                    "type": "number"
-                },
-                "longitude": {
-                    "type": "number"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "genproto.GetByEmail": {
             "type": "object",
             "properties": {
@@ -2628,20 +2527,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "genproto.NearbyFlashSalesRes": {
-            "type": "object",
-            "properties": {
-                "flash_sales": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/genproto.FlashSaleWithLocation"
-                    }
-                },
-                "total_count": {
-                    "type": "integer"
                 }
             }
         },
